# CMakeMSP430

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  msp430-gcc-toolchain.cmake
src/: main.c
util/: msp430-elf-gdb.cmd  msp430-elf-gdb.sh  mspdebug.cmd  mspdebug.sh  mspdebug_flash_gdb_helper.cmd  mspdebug_flash_gdb_helper.sh
